--- a/groups/bluetooth.yaml
+++ b/groups/bluetooth.yaml
@@ -7,7 +7,7 @@
     - device_tracker.matt_mahnkes_mac_pro
     - device_tracker.pb2032
     - device_tracker.playbulb_colour
-    - device_tracker.wills_iphone_
+    - device_tracker.wills_iphone
     - device_tracker.echo_dotu14
     - device_tracker.lunzbuntu_BT
     - device_tracker.lunzbuntu
