--- a/groups/roommates.yaml
+++ b/groups/roommates.yaml
@@ -1,7 +1,8 @@
-# # Roommates:
-#     name: "Roommates"
-#     icon: mdi:router-wireless
-#     entities:
-#     - device_tracker.lunziphone
-#     - device_tracker.amod
-#     - device_tracker.amandasiphone
+# Roommates:
+     name: Roommates
+     icon: mdi:account-multiple
+     all: true
+     entities:
+    #   - device_tracker.lunziphone
+      - device_tracker.amod
+      - device_tracker.maddi_iphone
