--- a/groups/tile.yaml
+++ b/groups/tile.yaml
@@ -2,6 +2,7 @@
     name: "Tile"
     icon: mdi:crosshairs-gps
     entities:
+      - device_tracker.tile_2db2d5935797dc1c
       - device_tracker.tile_kia
       - device_tracker.tile_keys
       - device_tracker.tile_lunziphone
